--- a/homebanking/prestamos/templates/listar_prestamo.html
+++ b/homebanking/prestamos/templates/listar_prestamo.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuentas del Cliente</title>
+    <title>Prestamos del Cliente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5">
-    <h2 class="text-center">Cuentas de {{ user.username }}</h2>
-    <p class="text-center">Aquí están las cuentas asociadas a tu perfil.</p>
+    <h2 class="text-center">Prestamos de {{ user.username }}</h2>
+    <p class="text-center">Aquí están los prestamos asociadas a tu perfil.</p>
 
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>ID Cuenta</th>
-                    <th>Tipo de Cuenta</th>
-                    <th>Saldo</th>
+                    <th>ID Prestamo</th>
+                    <th>Monto</th>
+                    <th>Fecha</th>
                 </tr>
             </thead>
             <tbody>
-                {% for account in accounts %}
+                {% for loan in loans %}
                     <tr>
-                        <td>{{ account.customer_account_id }}</td>
-                        <td>{{ account.fk_customer_account_account_type.account_type_name }}</td>
-                        <td>${{ account.customer_account_balance }}</td>
+                        <td>{{ loan.loan_id }}</td>
+                        <td>${{ loan.loan_total}}</td>
+                        <td>{{ loan.loan_date }}</td>
                     </tr>
                 {% empty %}
                     <tr>
-                        <td colspan="4" class="text-center">No tienes cuentas asociadas.</td>
+                        <td colspan="4" class="text-center">No tienes prestamos asociadas.</td>
                     </tr>
                 {% endfor %}
             </tbody>
