--- a/homebanking/tarjetas/templates/mis_targetas.html
+++ b/homebanking/tarjetas/templates/mis_targetas.html
@@ -37,6 +37,9 @@
             </tbody>
         </table>
     </div>
+    <div class="card-footer text-center">
+        <a href="{% url 'home' %}" class="btn btn-primary">Volver al Inicio</a>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
